[docs] Add docs about JVMTI agent usage, hacking, and compatibility